# reinvent-grep

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: flat_dir.rs
src/: main.rs
tests/: matching_file_names.rs
